--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,25 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+h1,
+ul,
+p {
+  margin: 0px;
+}
+
 ul {
-  margin: 0pc;
   padding: 0px;
   list-style: none;
 }
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+img {
+  max-width: 100%;
+  display: block;
 }
 
 .header-bg {
@@ -23,7 +34,7 @@ a {
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  box-sizing: border-box; /*propriedade faz com que valor do padding não some com max-width*/
+  box-sizing: border-box; /*propriedade faz com que valor do padding some com max-width*/
   padding: 20px;
   max-width: 1200px;
   margin-left: auto;
@@ -88,4 +99,60 @@ a {
     padding: 8px 12px;
     font-size: 14px;
   }
+}
+
+.introducao-bg {
+  background: #000000;
+  color: #ffffff;
+}
+
+.introducao {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 40px;
+  max-width: 1200px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.introducao-conteudo {
+  align-self: flex-end;
+  padding-bottom: 100px;
+}
+
+.introducao h1 {
+  margin-bottom: 32px;
+  font-size: 64px;
+  line-height: 1.125;
+}
+
+.introducao h1 span {
+  color: #ffbb00;
+}
+
+.introducao p {
+  margin-bottom: 32px;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #b2b2b2;
+}
+
+.introducao a {
+  display: inline-block;
+  padding: 16px 32px;
+  background: linear-gradient(#ffbf00, #f2a50c);
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  color: #332200;
+  font-size: 18px;
+  line-height: 1.33;
+  font-weight: bold;
+}
+
+.introducao a:hover {
+  background: linear-gradient(#ffb60d, #e59317);
 }
