--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 600px;
 }
 
 h1,
@@ -104,6 +105,7 @@ img {
 .introducao-bg {
   background: #000000;
   color: #ffffff;
+  box-shadow: inset 0px -120px #ffffff;
 }
 
 .introducao {
@@ -118,9 +120,15 @@ img {
   margin-right: auto;
 }
 
+.introducao img {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
 .introducao-conteudo {
   align-self: flex-end;
-  padding-bottom: 100px;
+  padding-bottom: 200px;
 }
 
 .introducao h1 {
