--- a/css/global/global.css
+++ b/css/global/global.css
@@ -6,7 +6,10 @@ body {
 }
 
 h1,
+h2,
+h3,
 ul,
+h4,
 p {
   margin: 0px;
 }
@@ -24,4 +27,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
